--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "boxicons": "^2.1.2",
     "core-js": "^3.8.3",
     "lottie-web-vue": "^2.0.6",
     "mdb-vue-ui-kit": "^1.12.0",
